src/examples/assertions/JsonTest.php.out
./tools/phpunit tests/JsonTest.php
PHPUnit 10.0.19 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.2.9

F                                                                   1 / 1 (100%)

Time: 00:00.001, Memory: 14.31 MB

There was 1 failure:

1) JsonTest::testFailure
Failed asserting that 'not-a-json-string' is valid JSON (Syntax error, malformed JSON).

/path/to/tests/JsonTest.php:8

FAILURES!
Tests: 1, Assertions: 1, Failures: 1.
